[package]
name = "mapbox_maps"
version = "0.1.0"
authors = ["Aleksandr Ovchinnikov <mail@mr1sunshine.com>"]
edition = "2018"
description = "Maps with Rust."
readme = "README.md"
repository = "https://https://github.com/mr1sunshine/mapbox-maps-rs"
license-file = "LICENSE"
keywords = ["mapbox", "maps"]
categories = ["multimedia"]

[dependencies]
eyre = "0.6.1"
reqwest = { version = "0.10.8", features = ["blocking", "gzip"] }
tokio = { version = "0.2.22", features = ["macros", "tcp", "dns", "io-util"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
regex = "1.4.1"
lazy_static = "1.4.0"
enum_dispatch = "0.3.3"
css-colors = "1.0.1"
raster_color = { version = "0.2.0", package = "raster" }
scan_fmt = "0.2.5"
tilejson = {git = "https://github.com/mr1sunshine/tilejson-rs.git" }
winit = "0.23.0"
futures = "0.3.6"
wgpu = "0.6.0"
